[package]
name = "egui_extras_xt"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
description = "Widget library for egui"
license = "MIT"
edition = "2021"
repository = "https://github.com/xTibor/egui_extras_xt"
homepage = "https://github.com/xTibor/egui_extras_xt"
categories = ["gui"]
keywords = ["ui", "gui", "egui", "widgets", "interface"]
publish = false

[badges]
maintenance = { status = "as-is" }

[dependencies]
ecolor = "0.20.0"
egui = "0.20.0"
emath = "0.20.0"
epaint = "0.20.0"
itertools = "0.10.3"
strum = { version = "0.24.1", features = ["derive"] }

barcoders = { version = "1.0.2", optional = true }
datamatrix = { version = "0.3.0", optional = true, default-features = false }
qrcode = { version = "0.11.2", optional = true, default-features = false }

[features]
barcodes = ["dep:barcoders", "dep:datamatrix", "dep:qrcode"]
compasses = []
displays = []
filesystem = []
knobs = []
ui = []
