[package]
name = "egui_extras_xt"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
description = "Widget library for egui"
license = "MIT"
edition = "2021"
repository = "https://github.com/xTibor/egui_extras_xt"
homepage = "https://github.com/xTibor/egui_extras_xt"
categories = ["gui"]
keywords = ["ui", "gui", "egui", "widgets", "interface"]
publish = false

[badges]
maintenance = { status = "as-is" }

[dependencies]
ecolor = "0.28"
egui = "0.28"
emath = "0.28"
epaint = "0.28"
itertools = "0.13.0"
strum = { version = "0.26.3", features = ["derive"] }

barcoders = { version = "2.0.0", optional = true }
datamatrix = { version = "0.3.1", optional = true, default-features = false }
qrcode = { version = "0.14.0", optional = true, default-features = false }

[features]
barcodes = ["dep:barcoders", "dep:datamatrix", "dep:qrcode"]
compasses = []
displays = []
filesystem = []
knobs = []
ui = []
