[package]
name = "egui_extras_xt_example"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
license = "MIT"
edition = "2021"

default-run = "showcase_demo"

[badges]
maintenance = { status = "as-is" }

[dependencies]
egui_extras_xt = { path = "../egui_extras_xt/" }

chrono = "0.4.22"
chrono-tz = "0.6.3"
eframe = "0.19.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
