[package]
name = "egui_extras_xt_example"
version = "0.1.0"
authors = ["Nagy Tibor <xnagytibor@protonmail.com>"]
description = "Demo applications for egui_extras_xt"
license = "MIT"
edition = "2021"
repository = "https://github.com/xTibor/egui_extras_xt"
homepage = "https://github.com/xTibor/egui_extras_xt"
publish = false

default-run = "showcase_demo"

[badges]
maintenance = { status = "as-is" }

[dependencies]
egui_extras_xt = { path = "../egui_extras_xt/", features = ["barcodes", "knobs", "compasses", "displays", "ui"] }

eframe = "0.19.0"
itertools = "0.10.3"
strum = { version = "0.24.1", features = ["derive"] }
